pxc/tests/test_078_strong/w4.px
public namespace w4;
import core::common -;
import core::pointer::strong -;

valuetype struct foo {
  public int x;
  public string y;
}

function void t1()
{
  const p = make_cptr(strong_count(foo(10, "abc")));
  {
    const s = strong(p); // error
    const s2 = s;
    println(*p);
  }
  println(*p);
}

t1();

